--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,44 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
+*{
+    font-family: "DM Sans", sans-serif;
+}
+
+.description-area {
+    resize: none;
+    max-height: 150px;
+}
+
+.description-area::placeholder{
+    font-style: italic;
+    color: rgb(105, 105, 105);
+}
+
+.post{
+
+}
+
+.post-image{
+    height: 400px;
+}
+
+.post-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.create-post {
+    position: fixed;
+    top: 20px;
+    width: 650px;
+    z-index: 1;
+}
+
+.posts {
+    padding-top: 200px;
+}
+
+.img-preview {
+    width: 70px;
+}
