--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,13 +25,15 @@
 .post-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:cover;
 }
 
+
 .create-post {
-    position: fixed;
+    position: absolute;
+    
     top: 20px;
-    width: 650px;
+    width: 750px;
     z-index: 1;
 }
 
